--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "npm run build && node dist/socket_server.js"
   },
   "dependencies": {
-    "ws": "^8.18.1"
+    "ws": "^8.18.2"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/ws": "^8.5.5"
+    "@types/node": "^22.15.17",
+    "@types/ws": "^8.18.1",
+    "typescript": "^5.8.3"
   }
 }
